force-app/main/default/objects/Activity/fields/Discussion_Summary__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Summary__c</fullName>
    <label>Discussion Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>