force-app/main/default/objects/Activity/fields/Follow_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Type__c</fullName>
    <label>Follow-Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Site Visit Follow-Up</fullName>
            </value>
            <value>
                <fullName>Payment Reminder</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Final Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>