force-app/main/default/objects/Activity/fields/Tower_Name__c.field-meta.xml
<CustomField>
    <fullName>Tower_Name__c</fullName>
    <label>Tower Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>